<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/margin_100dp"
                android:layout_height="@dimen/margin_100dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="@dimen/margin_20dp"
                android:src="@drawable/apk_icon" />

            <WebView
                android:id="@+id/WebView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />







            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"

                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="5dp"
                    android:text="Mobile :"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/margin_12dp" />

                <TextView
                    android:id="@+id/indiano"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="5dp"
                    android:text="@string/about_PhoneNo_India"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/margin_12dp" />
            </LinearLayout>


            <TextView
                android:id="@+id/serviceemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:fontFamily="serif"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/about_Emailnew"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/margin_12dp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/lblMobileNo"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:fontFamily="serif"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/about_Email"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/margin_12dp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>