<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            android:weightSum="100">

            <WebView
                android:id="@+id/WV_message"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="70"
                android:scrollbars="none"></WebView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:layout_marginTop="@dimen/margin_5dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@mipmap/logo" />
                <Button
                    android:id="@+id/Bt_back_to_login"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button"
                    android:text="OK"
                    android:layout_marginBottom="5dp"
                    android:onClick="ok_click"
                    android:textColor="@color/white" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="0.60"
                            android:gravity="center_vertical"
                            android:text="@string/hint_username"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_12sp" />

                        <TextView
                            android:id="@+id/tv_username"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/margin_15dp"
                            android:layout_marginRight="@dimen/margin_15dp"
                            android:layout_weight="1.40"
                            android:gravity="left|center"
                            android:hint="Username"
                            android:paddingLeft="@dimen/margin_10dp"
                            android:singleLine="true"
                            android:textSize="@dimen/margin_12dp" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height=".05dp"
                        android:layout_marginRight="@dimen/margin_20dp"
                        android:background="@color/GrayCloud"></View>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="0.60"
                            android:gravity="center_vertical"
                            android:text="@string/hint_packagename"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_12sp" />

                        <TextView
                            android:id="@+id/tv_packagename"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/margin_15dp"
                            android:layout_marginRight="@dimen/margin_15dp"
                            android:layout_weight="1.40"
                            android:gravity="left|center"
                            android:hint="@string/hint_packagename"
                            android:maxLines="2"
                            android:paddingLeft="@dimen/margin_10dp"
                            android:textSize="@dimen/margin_12dp" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height=".05dp"
                        android:layout_marginRight="@dimen/margin_20dp"
                        android:background="@color/GrayCloud"></View>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="0.60"
                            android:gravity="center_vertical"
                            android:text="@string/hint_activation_code"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_12sp" />

                        <TextView
                            android:id="@+id/tv_activation_code"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/margin_15dp"
                            android:layout_marginRight="@dimen/margin_15dp"
                            android:layout_weight="1.40"
                            android:gravity="left|center"
                            android:hint="@string/hint_activation_code"
                            android:paddingLeft="@dimen/margin_10dp"
                            android:singleLine="true"
                            android:textSize="@dimen/margin_12dp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imgCalling"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/logo" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>