<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50dp"
            android:gravity="center">


            <include layout="@layout/toolbar_hocapp"></include>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Enter Card Details"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16sp"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/seecard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="8dp"
            android:text="View your saved cards."
            android:textColor="@color/theme_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="Card Number"
                android:textSize="@dimen/text_size_12sp" />

            <EditText
                android:id="@+id/cardNumber"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="@dimen/margin_2dp"
                android:background="@drawable/rectangular_border"
                android:drawableLeft="@drawable/card_icon"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorPrimary"
                android:hint="XXXX XXXX XXXX XXXX"
                android:imeOptions="actionNext"
                android:maxLength="16"
                android:paddingLeft="14dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/brown"
                android:textSize="@dimen/text_size_12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/errorCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_30dp"
            android:orientation="vertical"
            android:visibility="gone">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Invalid credit card"
                android:textColor="@color/dark_red"
                android:textSize="10sp"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="Card Holder Name"
                android:textSize="@dimen/text_size_12sp" />

            <EditText
                android:id="@+id/cardHolderName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="@dimen/margin_2dp"
                android:background="@drawable/rectangular_border"
                android:drawableLeft="@drawable/card_icon"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorPrimary"
                android:hint="@string/CARD_HOLDER_NAMECL"
                android:imeOptions="actionNext"
                android:maxLength="50"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/brown"
                android:textSize="@dimen/text_size_12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="Expiry Month"
                    android:textSize="@dimen/text_size_12sp" />

                <EditText
                    android:id="@+id/cardExpiryMonth"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="@dimen/margin_2dp"
                    android:background="@drawable/rectangular_border"
                    android:drawableLeft="@drawable/expirydate_icon"
                    android:drawablePadding="14dp"
                    android:drawableTint="@color/colorPrimary"
                    android:hint="@string/EXPIRY_MONTHCL"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="2"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/brown"
                    android:textSize="@dimen/text_size_12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Expiry Year"
                    android:textSize="@dimen/text_size_12sp" />

                <EditText
                    android:id="@+id/cardExpiryYear"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="@dimen/margin_2dp"
                    android:background="@drawable/rectangular_border"
                    android:drawableLeft="@drawable/expirydate_icon"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/colorPrimary"
                    android:hint="@string/EXPIRY_YEARCL"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="2"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/brown"
                    android:textSize="@dimen/text_size_12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="CVV"
                    android:textSize="@dimen/text_size_12sp" />

                <EditText
                    android:id="@+id/cardCvv"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="@dimen/margin_2dp"
                    android:background="@drawable/rectangular_border"
                    android:drawableLeft="@drawable/cvv_icon"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/colorPrimary"
                    android:hint="XXX"
                    android:imeOptions="actionNext"
                    android:inputType="numberPassword"
                    android:maxLength="4"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/brown"
                    android:textSize="@dimen/text_size_12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/errorMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_30dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:orientation="vertical"
            android:visibility="gone">


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Invalid expiry month"
                android:textColor="@color/dark_red"
                android:textSize="@dimen/text_size_10sp"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/errorYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_30dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:orientation="vertical"
            android:visibility="gone">


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Invalid expiry year"
                android:textColor="@color/dark_red"
                android:textSize="@dimen/text_size_10sp"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_30dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:orientation="vertical"
            android:visibility="gone">


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Invalid CVV number"
                android:textColor="@color/dark_red"
                android:textSize="@dimen/text_size_10sp"
                android:visibility="visible" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/CB_forRenew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:checked="true"
            android:text="Use this card for future payments."
            android:textColor="@color/brown" />


        <Button
            android:id="@+id/submitCardDetail"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_20dp"
            android:background="@drawable/rectangular_border_red"
            android:paddingBottom="@dimen/margin_10dp"
            android:paddingTop="@dimen/margin_10dp"
            android:text="Pay Now"
            android:textColor="#ffffff"
            android:textSize="12dp" />

    </LinearLayout>
</ScrollView>